# cbuffer

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
edl_cbuffer/: __init__.py  circular_buffer.py
tests/: test_circular_buffer.py
